# llm-translate

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: IMPLEMENTATION_PLAN.md
docs/plan/: mvp-llm-translator.md
examples/: real_translation.py
src/llm_translate/: __init__.py  client.py  config.py  models.py  prompts.py  retry.py
src/llm_translate/processors/: __init__.py  batch.py  document.py
src/llm_translate/splitters/: __init__.py  base.py  html.py  markdown.py  text.py
src/llm_translate/utils/: __init__.py  placeholders.py
tests/: test_async_document.py  test_batch.py  test_client.py  test_html.py  test_markdown.py  test_retry.py  test_text_splitter.py
