[project]
name = "openai-llm-translate"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YunHai", email = "yunhai@yhnotes.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx[socks]>=0.28.1",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
llm-translate = "llm_translate:main"

[tool.uv.build-backend]
module-name = "llm_translate"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
